--- a/src/App.css
+++ b/src/App.css
@@ -4,28 +4,29 @@ body{
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.red {
+  color: red;
+}
+.bold{
+  font-weight: bold;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.App button {
+  background-color: green;
+  border: 1px solid blue;
+  color: white;
+  padding: 16px;
+  font: inherit;
+  cursor: pointer;
+}
+.App button:hover {
+  background-color: lightgreen;
+  color: black;
+}
+.App button.Red {
+  background-color: red;
   color: white;
 }
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App button.Red:hover {
+  background-color: salmon;
 }
